# FlashPod

./: .env.example  .gitignore  CLAUDE.md  IDEAS.md  README.md  api.py  detect_symbols.py  gpu_worker.py  load_test.py  pricing_worker.py  proposal_worker.py  pyproject.toml  skills-lock.json  takeoff_worker.py
backend/: .env.example  requirements.txt
backend/app/: db.py  main.py  models.py
backend/app/routers/: drawings.py  projects.py  takeoffs.py  templates.py
backend/app/services/: brightdata_client.py  pricing.py  proposal_export.py  runpod_client.py  storage.py
backend/tests/: conftest.py  test_brightdata_client.py  test_pricing.py  test_runpod_unwrap.py  test_takeoff_router.py
data/: sample_takeoff.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  exports.ts  jobs.ts  lib.ts  mock.ts  pdf.ts  review.ts  theme.css  types.ts
frontend/src/components/: DetectionInspector.tsx  DrawingCanvas.tsx  JobsView.tsx  LineItemTable.tsx  ProjectPage.tsx  ProposalPage.tsx  ProposalPanel.tsx  ResultsScreen.tsx  ReviewPage.tsx  RunScreen.tsx  SymbolSetupModal.tsx  SymbolsScreen.tsx  TopBar.tsx  UploadScreen.tsx
pricing/: __init__.py  build_catalog.py  catalog.json  catalog.py  embed_pricebook.py  price_cache.json  price_takeoff.py  pricing.py  scraper.py  symbol_sku.py  worker_step.py
prompts/: generate-ui-prompt.md  ui-build-prompt.md
scripts/: check_account.py  check_brightdata.py
tests/: test_pricing.py
