[project]
name = "flashpod"
version = "0.1.0"
description = "Runpod Flash hackathon starter — Python-first serverless GPU endpoints"
requires-python = ">=3.10,<3.14"
dependencies = [
    "runpod-flash",
    "python-dotenv",
    "aiohttp",   # load_test.py
    "requests",  # scripts/check_account.py, brightdata_demo.py
]

[tool.uv]
# Flash GPU workers run Python 3.12; pin locally to match.
